--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc --project ./",
+    "start": "tsc --project ./ ; node build/index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +18,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.24",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1"
   }
 }
